--- a/views/pokemons.handlebars
+++ b/views/pokemons.handlebars
@@ -7,7 +7,7 @@
 <div class="row">
     {{!--{{#each pokemons}}--}}
     {{!--{{pokemons}}--}}
-    <div class="col-sm-4">
+    {{!--<div class="col-sm-4">
         <div class="well text-center">
             <h3 class="text-center">Naam</h3>
             <img src="https://upload.wikimedia.org/wikipedia/en/2/28/Pokémon_Bulbasaur_art.png">
@@ -43,6 +43,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>--}}
     {{!--{{/each}}--}}
 </div>
