--- a/views/pokemons.handlebars
+++ b/views/pokemons.handlebars
@@ -1,5 +1,6 @@
 <div class="page-header text-center">
-    <h1><span class="fa fa-gamepad"></span> Pokemons</h1>
+		<img class="pokeball" src="./img/pokeball.svg">
+		<h1> Pokémons </h1>
 </div>
 
 {{#each pokemons}}
