--- a/views/pokemons.handlebars
+++ b/views/pokemons.handlebars
@@ -6,11 +6,11 @@
 {{#each pokemons}}
 	<div class="col-sm-4">
 		<div class="well text-center">
-			<h3 class="text-center poke-name">{{this.name}}</h3>
-			<a data-toggle="tooltip" title="Click me!" onclick="$('#cry-{{this.id}}')[0].play();">
-				<img class="poke-img" src="./img/pokemon/{{this.id}}.png">
+			<h3 class="text-center poke-name">{{this.name}} #{{padNumber this.id 3 '0'}}</h3>
+			<a data-toggle="tooltip" title="Click me!" onclick="$('#cry-{{this.id }}')[0].play();">
+				<img class="poke-img" src="./img/pokemon/{{this.id }}.png">
 			</a>
-			<audio id="cry-{{this.id}}" ><source src="./media/sound/cries/{{this.id}}.ogg" type="audio/ogg"></audio>
+			<audio id="cry-{{this.id }}" ><source src="./media/sound/cries/{{this.id }}.ogg" type="audio/ogg"></audio>
 			<div class="row">
 				<div class="col-sm-12">
 					<h4>Type(s)</h4>
