--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,5 +1,5 @@
 <div class="page-header text-center">
-    <h1><span class="fa fa-user"></span> {{title}}</h1>
+    <h1><span class="fa fa-user"></span> Hello {{user.role}}</h1>
     <a href="/logout" class="btn btn-default btn-sm">Logout</a>
 </div>
 
