Grid fixes, newline in string helper

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,17 @@
 	text-transform: capitalize;
 }
 
+@media only screen and (max-width : 992px) {
+	.col-xs-6:nth-of-type(2n) {
+		clear: both;
+	}
+}
+@media only screen and (min-width : 992px) {
+	.col-md-4:nth-of-type(3n+2) {
+		clear: both;
+	}
+}
+
 .normal {
 	background-color: #A8A878;
 }
