--- a/views/pokemons.handlebars
+++ b/views/pokemons.handlebars
@@ -4,7 +4,7 @@
 </div>
 
 {{#each pokemons}}
-	<div class="col-sm-4">
+	<div class="col-xs-6 col-md-4">
 		<div class="well text-center">
 			<h3 class="text-center poke-name">{{this.name}} #{{pad this.id 3 0}}</h3>
 			<a data-toggle="tooltip" title="Click me!" onclick="$('#cry-{{this.id }}')[0].play();">
@@ -42,7 +42,7 @@
 
 			<div class="row">
 				<div class="col-sm-12">
-					<p><span>{{this.flavour_text}}</span></p>
+					<p>{{{nl2br this.flavour_text}}}</p>
 				</div>
 			</div>
 			
