--- a/views/access-denied.handlebars
+++ b/views/access-denied.handlebars
@@ -1,6 +1,8 @@
 <div class="jumbotron text-center">
 	<h1><span class="fa"></span> We're sorry, you cannot access {{action}}</h1>
 	<p>Login or Register with:</p>
-    <a href="/auth/google" class="btn btn-default"><span class="fa fa-google"></span> Google</a>
+    <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
+	<a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
+	<a href="/auth/google" class="btn btn-default"><span class="fa fa-google"></span> Google</a>
 	<a href="/auth/github" class="btn btn-default"><span class="fa fa-github"></span> GitHub</a>
 </div>
