--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,8 @@
 <div class="jumbotron text-center">
 	<h1>Welcome!</h1>
 	<p>Login or Register with:</p>
+	<a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
+	<a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
 	<a href="/auth/google" class="btn btn-default"><span class="fa fa-google"></span> Google</a>
 	<a href="/auth/github" class="btn btn-default"><span class="fa fa-github"></span> GitHub</a>
 </div>
