--- a/views/locations.handlebars
+++ b/views/locations.handlebars
@@ -6,6 +6,50 @@
 <div id="googleMap" style="width:100%;height:600px;"></div>
 
 <script>
+function createMarker(location, pokemonList, map) {
+	
+	var pokemon = pokemonList.find(function(element) {
+		return element.id === location.pokemon_id;
+	});
+	
+	var infowindow = new google.maps.InfoWindow({
+	  content: "You can catch a <span class='poke-name'>" + pokemon.name + "</span> here!"
+	});
+	
+	var marker = new google.maps.Marker({
+		position: { lat: location.lat, lng: location.lng},
+		map: map,
+		icon: "img/pokemon/" + location.pokemon_id + ".png",
+		draggable: true
+	});
+	
+	marker.addListener('click', function() {
+	  infowindow.open(map, marker);
+	});
+	
+	marker.addListener("dblclick", function() {
+		marker.setMap(null);
+		$.ajax({
+			url : '/locations/' + location._id,
+			type : 'DELETE',
+			success: function() {
+				window.location = '/locations';
+			}
+		});
+	});
+	
+	marker.addListener("dragend", function(event) {
+		$.ajax({
+			url : '/locations/' + location._id,
+			data : { lat: marker.position.lat(), lng: marker.position.lng() },
+			type : 'PATCH',
+			success: function() {
+				window.location = '/locations';
+			}
+		});
+	});
+}
+
 function myMap() {
 	var mapOptions = {
 		center:new google.maps.LatLng(51.689092,5.2950668),
@@ -22,54 +66,14 @@ function myMap() {
 		var pokemonList = JSON.parse(pokemons).pokemons;
 		
 		locations.forEach(function(location) {
-			
-			var pokemon = pokemonList.find(function(element) {
-				return element.id === location.pokemon_id;
-			});
-			
-			var infowindow = new google.maps.InfoWindow({
-			  content: "You can catch a <span class='poke-name'>" + pokemon.name + "</span> here!"
-			});
-			
-			var marker = new google.maps.Marker({
-				position: { lat: location.lat, lng: location.lng},
-				map: map,
-				icon: "img/pokemon/" + location.pokemon_id + ".png",
-				draggable: true
-			});
-			
-			marker.addListener('click', function() {
-			  infowindow.open(map, marker);
-			});
-			
-			marker.addListener("dblclick", function() {
-				marker.setMap(null);
-			});
+			createMarker(location, pokemonList, map);
 		});
 		
 		google.maps.event.addListener(map, 'click', function(event) {
-			var random = getRandomIntInclusive(1, 151);
-			var pokemon = pokemonList.find(function(element) {
-				return element.id === random;
-			});
+			var random = 15;//getRandomIntInclusive(1, 151);
 			
-			var infowindow = new google.maps.InfoWindow({
-				content: "You can catch a <span class='poke-name'>" + pokemon.name + "</span> here!"
-			});
-
-			var marker = new google.maps.Marker({
-				position: event.latLng,
-				map: map,
-				icon: "img/pokemon/" + pokemon.id + ".png",
-				draggable: true
-			});
-
-			marker.addListener('click', function() {
-				infowindow.open(map, marker);
-			});
-
-			marker.addListener("dblclick", function() {
-				marker.setMap(null);
+			$.post( '/locations', { lat: event.latLng.lat(), lng: event.latLng.lng(), pokemon_id: random }, function() {
+			  window.location = '/locations';
 			});
 		});
 	});
