Getting Pokemons from PokeApi
If a Pokemon is not found in our database, the Pokemon will be getted from the PokeApi and saved to our database. Error handling needs to be done.

--- a/views/pokemons.handlebars
+++ b/views/pokemons.handlebars
@@ -52,7 +52,7 @@
 					<div class="col-sm-6">
 						<h4>HP:</p>
 						<h4>Attack:</h4>
-						<h4>Defence:</h4>
+						<h4>Defense:</h4>
 						<h4>Sp.Atk:</h4>
 						<h4>Sp.Def:</h4>
 						<h4>Speed:</h4>
@@ -60,9 +60,9 @@
 					<div class="col-sm-6">
 						<p>{{this.stats.hp}}</p>
 						<p>{{this.stats.attack}}</p>
-						<p>{{this.stats.defence}}</p>
-						<p>{{this.stats.sp-atk}}</p>
-						<p>{{this.stats.sp-def}}</p>
+						<p>{{this.stats.defense}}</p>
+						<p>{{this.stats.special-attack}}</p>
+						<p>{{this.stats.special-defense}}</p>
 						<p>{{this.stats.speed}}</p>
 					</div>
 				</div>
