--- a/views/pokemons.handlebars
+++ b/views/pokemons.handlebars
@@ -1,5 +1,5 @@
 <div class="page-header text-center">
-		<img class="pokeball" src="./img/pokeball.svg">
+		<img class="pokeball" src="/img/pokeball.svg">
 		<h1> Pokémons </h1>
 </div>
 
@@ -8,9 +8,9 @@
 		<div class="well text-center">
 			<h3 class="text-center poke-name">{{this.name}} #{{pad this.id 3 0}}</h3>
 			<a data-toggle="tooltip" title="Click me!" onclick="$('#cry-{{this.id }}')[0].play();">
-				<img class="poke-img" src="./img/pokemon/{{this.id }}.png">
+				<img class="poke-img" src="/img/pokemon/{{this.id }}.png">
 			</a>
-			<audio id="cry-{{this.id }}" ><source src="./media/sound/cries/{{this.id }}.ogg" type="audio/ogg"></audio>
+			<audio id="cry-{{this.id }}" ><source src="/media/sound/cries/{{this.id }}.ogg" type="audio/ogg"></audio>
 			<div class="row">
 				<div class="col-sm-12">
 					<h4>{{pluralise this.types 'Type'}}</h4>
