User can only have one role
Updated schema and code so user can only have one role.

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -13,7 +13,7 @@
                 <strong>id</strong>: {{ user._id }}<br>
                 <strong>username</strong>: {{ user.local.username }}<br>
                 <strong>password</strong>: {{ user.local.password }}<br>
-                <strong>roles</strong>: {{ user.roles }}                
+                <strong>role</strong>: {{ user.role }}                
             </p>
         </div>
     </div>
