--- a/views/locations.handlebars
+++ b/views/locations.handlebars
@@ -6,46 +6,45 @@
 <div id="googleMap" style="width:100%;height:600px;"></div>
 
 <script>
-function createMarker(location, pokemonList, map) {
+function createMarker(location, map) {
 	
-	var pokemon = pokemonList.find(function(element) {
-		return element.id === location.pokemon_id;
-	});
+	$.get( '/locations/' + location._id + "/pokemon", function(pokemon) {
 	
-	var infowindow = new google.maps.InfoWindow({
-	  content: "You can catch a <span class='poke-name'>" + pokemon.name + "</span> here!"
-	});
-	
-	var marker = new google.maps.Marker({
-		position: { lat: location.lat, lng: location.lng},
-		map: map,
-		icon: "img/pokemon/" + location.pokemon_id + ".png",
-		draggable: true
-	});
-	
-	marker.addListener('click', function() {
-	  infowindow.open(map, marker);
-	});
-	
-	marker.addListener("dblclick", function() {
-		marker.setMap(null);
-		$.ajax({
-			url : '/locations/' + location._id,
-			type : 'DELETE',
-			success: function() {
-				window.location = '/locations';
-			}
+		var infowindow = new google.maps.InfoWindow({
+		  content: "You can catch a <span class='poke-name'>" + pokemon.name + "</span> here!"
 		});
-	});
-	
-	marker.addListener("dragend", function(event) {
-		$.ajax({
-			url : '/locations/' + location._id,
-			data : { lat: marker.position.lat(), lng: marker.position.lng() },
-			type : 'PATCH',
-			success: function() {
-				window.location = '/locations';
-			}
+		
+		var marker = new google.maps.Marker({
+			position: { lat: location.lat, lng: location.lng},
+			map: map,
+			icon: "img/pokemon/" + pokemon.id + ".png",
+			draggable: true
+		});
+		
+		marker.addListener('click', function() {
+		  infowindow.open(map, marker);
+		});
+		
+		marker.addListener("dblclick", function() {
+			marker.setMap(null);
+			$.ajax({
+				url : '/locations/' + location._id,
+				type : 'DELETE',
+				success: function() {
+					window.location = '/locations';
+				}
+			});
+		});
+		
+		marker.addListener("dragend", function(event) {
+			$.ajax({
+				url : '/locations/' + location._id,
+				data : { lat: marker.position.lat(), lng: marker.position.lng() },
+				type : 'PATCH',
+				success: function() {
+					window.location = '/locations';
+				}
+			});
 		});
 	});
 }
@@ -61,20 +60,15 @@ function myMap() {
 	var map = new google.maps.Map( document.getElementById("googleMap" ), mapOptions);
 	var locations = JSON.parse( '{{{json locations}}}' );
 	
-	$.get( "/pokemons", function( pokemons ) {
+	locations.forEach(function(location) {
+		createMarker(location, map);
+	});
+	
+	google.maps.event.addListener(map, 'click', function(event) {
+		var random = '1';//getRandomIntInclusive(1, 151);
 		
-		var pokemonList = JSON.parse(pokemons).pokemons;
-		
-		locations.forEach(function(location) {
-			createMarker(location, pokemonList, map);
-		});
-		
-		google.maps.event.addListener(map, 'click', function(event) {
-			var random = 1;//getRandomIntInclusive(1, 151);
-			
-			$.post( '/locations', { lat: event.latLng.lat(), lng: event.latLng.lng(), pokemon_id: random }, function() {
-			  window.location = '/locations';
-			});
+		$.post( '/locations', { lat: event.latLng.lat(), lng: event.latLng.lng(), pokemon: random }, function() {
+		  window.location = '/locations';
 		});
 	});
 }
