--- a/views/pokemons.handlebars
+++ b/views/pokemons.handlebars
@@ -43,7 +43,7 @@
 
 		<div class="row">
 			<div class="col-sm-12">
-				<p>{{{nl2br this.flavour_text}}}</p>
+				<p>{{{f2sp this.flavour_text}}}</p>
 			</div>
 		</div>
 
