--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,7 @@
                     <li><a href="/pokemons">Pokemons</a></li>
                     <li><a href="/users">Users</a></li>
                     <li><a href="/locations">Locations</a></li>
+					<li><a href="https://github.com/tthverst/pokedex-api/wiki">Docs</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 					{{#if user}}
