--- a/views/pokemons.handlebars
+++ b/views/pokemons.handlebars
@@ -72,10 +72,8 @@
 </div>
 {{/each}}
 
-{{length}}
-
 {{#if showButtons}}
-<div class="col-lg-12 text-center">
+<div class="col-xs-12 text-center">
 	<div class="well">
 		{{#if prevPage}}
 		<a class="btn btn-primary" href="?page={{prevPage}}&limit={{limit}}">Previous page</a>
